--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,117 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gillbert</title>
   <link rel="stylesheet" href="./assets/styles.css" />
+  <style>
+    body {
+      margin: 0;
+      padding: 16px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: linear-gradient(135deg, #4FACFE 0%, #00F2FE 100%);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 500px;
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 48px;
+      color: white;
+    }
+
+    .header h1 {
+      margin: 0;
+      font-size: 48px;
+      font-weight: 700;
+    }
+
+    .header p {
+      margin: 8px 0 0 0;
+      font-size: 16px;
+      opacity: 0.9;
+    }
+
+    .primary-button {
+      display: block;
+      width: 100%;
+      padding: 24px;
+      margin-bottom: 32px;
+      font-size: 18px;
+      font-weight: 600;
+      border: none;
+      border-radius: 12px;
+      background: white;
+      color: #4FACFE;
+      cursor: pointer;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+      transition: transform 0.2s, box-shadow 0.2s;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    .primary-button:active {
+      transform: scale(0.98);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .button-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+      gap: 12px;
+    }
+
+    .secondary-button {
+      display: inline-block;
+      padding: 16px 12px;
+      font-size: 14px;
+      font-weight: 600;
+      border: none;
+      border-radius: 8px;
+      background: rgba(255, 255, 255, 0.2);
+      color: white;
+      cursor: pointer;
+      transition: background 0.2s, transform 0.2s;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    .secondary-button:active {
+      background: rgba(255, 255, 255, 0.3);
+      transform: scale(0.95);
+    }
+  </style>
 </head>
 <body>
-  <main class="wrap">
-    <h1>Gillbert</h1>
-    <p>Local dev is working ✅</p>
-    <p>Hello World.  Update01.</p>
-    <button id="ping">Ping</button>
-    <pre id="out"></pre>
-  </main>
+  <div class="container">
+    <div class="header">
+      <h1>Gillbert</h1>
+      <p>🎣 Your AI companion who loves fishing! 🐟</p>
+    </div>
+
+    <a href="" class="primary-button">
+      💬 Talk to Gillbert
+    </a>
+
+    <div class="button-grid">
+      <a href="./media-upload.html" class="secondary-button">
+        📁 Upload Media
+      </a>
+      <span class="secondary-button" style="opacity: 0.5; cursor: not-allowed;">
+        ⚙️ Settings
+      </span>
+      <span class="secondary-button" style="opacity: 0.5; cursor: not-allowed;">
+        📚 Help
+      </span>
+      <span class="secondary-button" style="opacity: 0.5; cursor: not-allowed;">
+        ➕ More
+      </span>
+    </div>
+  </div>
 
   <script src="./assets/app.js"></script>
 </body>
