Some small visual adjustments.  Adding links to the Catch log too.

--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,16 @@
     </a>
 
     <div class="button-grid">
+      <a href="https://airtable.com/appczcFI3Qt4YFgzr/shr1iSzIjq704eXzN" class="secondary-button">
+        📖 Catch History - Cards
+      </a>
       <a href="./media-upload.html" class="secondary-button">
-        📁 Upload Media
+        ⬆️ Upload Media
+      </a>
+      <a href="https://airtable.com/appczcFI3Qt4YFgzr/shr968AnvL56Xj8py" class="secondary-button">
+        📋 Catch History - Grid
       </a>
       <!--<span class="secondary-button" style="opacity: 0.5; cursor: not-allowed;">
-        ⚙️ Settings
-      </span>
-      <span class="secondary-button" style="opacity: 0.5; cursor: not-allowed;">
         📚 Help
       </span>
       <span class="secondary-button" style="opacity: 0.5; cursor: not-allowed;">
