Adding a few additional nav icons.

--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,19 @@
 
     <div class="button-grid">
       <a href="https://airtable.com/appczcFI3Qt4YFgzr/shr1iSzIjq704eXzN" class="secondary-button">
-        📖 Catch History - Cards
+        📖 Catch Cards
       </a>
+      <a href="https://airtable.com/appczcFI3Qt4YFgzr/shr968AnvL56Xj8py" class="secondary-button">
+        📋 Catch Grid
+      </a>
+      </div>
+      <br />
+    <div class="button-grid">
       <a href="./media-upload.html" class="secondary-button">
         ⬆️ Upload Media
       </a>
-      <a href="https://airtable.com/appczcFI3Qt4YFgzr/shr968AnvL56Xj8py" class="secondary-button">
-        📋 Catch History - Grid
+      <a href="https://airtable.com/appczcFI3Qt4YFgzr/shrELfXnMkjsohrlt" class="secondary-button">
+        🖼️ View Media
       </a>
       <!--<span class="secondary-button" style="opacity: 0.5; cursor: not-allowed;">
         📚 Help
