More formatting changes.  Also making the upload page more intuitive.

--- a/src/media-upload.html
+++ b/src/media-upload.html
@@ -19,6 +19,8 @@
         <!-- Options will be filled in via JavaScript -->
       </select>
 
+      <div id="catchSummary" class="catch-summary"></div>
+
       <label for="files">Photos / Videos</label>
       <input id="files" type="file" multiple accept="image/*,video/*" />
 
