--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
       <p>🎣 Your AI companion who loves fishing! 🐟</p>
     </div>
 
-    <a href="https://n8n.kwtechhub.net/webhook/9ade669b-27f8-4460-870b-694053bd2bbe/chat" class="primary-button">
-      💬 Talk to Gillbert
+    <a href="https://api.kwtechhub.net/webhook/9ade669b-27f8-4460-870b-694053bd2bbe/chat" class="primary-button">
+    💬 Talk to Gillbert
     </a>
 
     <div class="button-grid">
