Making media upload page more intuitive and informative.

--- a/src/media-upload.html
+++ b/src/media-upload.html
@@ -26,6 +26,13 @@
 
       <button id="uploadBtn" class="primary-button">Upload Files</button>
       <div id="status" class="status"></div>
+
+      <div id="loadingIndicator" class="loading-indicator">
+        <div class="fishing-animation">
+          🎣<span class="bobber">●</span>
+        </div>
+        <p>Uploading your catch media...</p>
+      </div>
     </div>
 
     <div id="log" class="log"></div>
